src/test/data/c/fail/redeclare_kind.c
struct S;
union S {
  int b;
};
