src/test/data/c/fail/redeclare_kind.c.err
data/c/fail/redeclare_kind.c:2:1-4:2: error: tag 'S' redeclared as a different kind
 2 | union S {
   | ^~~~~~~~~
